# fc-linux-chams

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  MERGE_PLAN.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  fc2-chams.md  overlay.json  overlay.schema.json  shm_simulator.py
.claude/: agent-workflow.md  architecture.md  build-system.md  code-style.md
.github/workflows/: build.yml
assets/fgrenade_helper/: cloud_grenades.json
luas/: bridge.lua  bridge_collector_grenades.lua  bridge_collector_grenades_v2.lua  grenade_trajectory.lua  grenade_warning.lua
scratch/: download_imgui.sh  test_model_load.cpp
src/: config.cpp  config.hpp  esp_drawing.hpp  logger.hpp  main.cpp  menu_client.cpp  menu_client.hpp  model_cache.cpp  model_cache.hpp  overlay_client.cpp  overlay_client.hpp  shm_reader.hpp
src/app/: App.cpp  App.hpp  FrameInput.hpp  FrameScheduler.cpp  FrameScheduler.hpp  FrameState.hpp  GrenadeHelperData.cpp  GrenadeHelperData.hpp  GrenadeHelperRenderer.cpp  GrenadeHelperRenderer.hpp  GrenadeRenderer.cpp  GrenadeRenderer.hpp  GrenadeTracker.cpp  GrenadeTracker.hpp  SvgCache.cpp  SvgCache.hpp  VisibilityWorker.cpp  VisibilityWorker.hpp
src/math/: BoneMath.hpp  ViewMatrix.hpp
src/menu/: menu_client.cpp  menu_client.hpp  menu_preview.cpp  menu_preview.hpp  menu_tabs.cpp  menu_tabs.hpp  menu_theme.hpp
src/overlay/: bvh_parser.hpp  esp_drawing.hpp  overlay_client.cpp  overlay_client.hpp  shm_reader.hpp  trajectory_sim.hpp
src/renderer/: Passes.cpp  Passes.hpp  depth_prepass.cpp  depth_prepass.hpp  esp_renderer.cpp  esp_renderer.hpp  gl_loader.hpp  gpu_chams.cpp  gpu_chams.hpp  gpu_profiler.cpp  gpu_profiler.hpp
src/vischeck/: bvh_parser.hpp  trajectory_sim.hpp
src/vpk/: kv3.hpp  source2.hpp  vpk.hpp
src/vpk/vmdl/: model.cpp  model.hpp  vmdl.cpp  vmdl.hpp
src/vpk/vmdl/maps/: map_parser.cpp  map_parser.hpp
tests/: conftest.py  mock_vpk_gen.py  test_camera_position.py  test_config_dirty.py  test_e2e_tier1.py  test_e2e_tier2.py  test_e2e_tier3.py  test_e2e_tier4.py
tests/cpp/: test_main.cpp
